# reward-pool

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml
programs/reward-pool/: Cargo.toml
programs/reward-pool/src/: lib.rs  math.rs  version.rs
programs/reward-pool/src/calculator/: pool_v2.rs
programs/reward-pool/tests/: flow.ts
scripts/: README-smoke.md  asserts.ts  connection.ts  ensure-anchor-wallet.js  env.ts  idl.ts  pdas.ts  pin_and_deploy.sh  reward_pool_smoke.ts  spl.ts  sync-program-id.ts
tests/: flow.ts
