[package]
name = "reward-pool"
version = "0.2.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reward_pool"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

#add to default for local testing
#default = ["local-testing","test-id"]
#note, can also use `anchor test -- --feature local-testing,test-id` now
local-testing = []
test-id = []
verbose = []

[dependencies]
anchor-lang = "0.31"
anchor-spl  = "0.31"
spl-token   = { version = "4", features = ["no-entrypoint"] }
spl-math    = { version = "0.1", features = ["no-entrypoint"] }
base64ct = { version = "1.7.1", default-features = false }
getrandom = { version = "0.1.16", features = ["dummy"] }


