[package]
name = "reward-pool"
version = "0.2.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reward_pool"

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
local-testing = []
test-id = []
verbose = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

# Silence `unexpected cfg` warnings for these optional flags
anchor-debug = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.31"
anchor-spl  = "0.31"
spl-token   = { version = "4", features = ["no-entrypoint"] }
getrandom = { version = "0.1.16", features = ["dummy"] }
uint = { version = "0.9", default-features = false }


